<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.LoginFragment"
    style="@style/background">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/logofutmundo" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            style="@style/layoutLogin">

            <EditText
                android:id="@+id/editTextUsuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Usuario"
                style="@style/editTextsLogin"/>

            <EditText
                android:id="@+id/editTextContrasenya"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Contraseña"
                android:inputType="textPassword"
                style="@style/editTextsLogin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/noticias_redondos"
                    android:textColor="@color/black"
                    android:text="@string/login"
                    style="@style/buttons"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonRegistre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/registrarse"
                    android:background="@drawable/noticias_redondos"
                    style="@style/buttons" />
            </LinearLayout>

            <TextView
                android:id="@+id/loginAnonimo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrarComoAnonimo"
                android:textAlignment="center"
                style="@style/anonimo"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
